--- a/.env
+++ b/.env
@@ -17,3 +17,5 @@
 APP_ENV=dev
 APP_SECRET=5b28b8b4ba9ff9fa062aa2ed585e2555
 ###< symfony/framework-bundle ###
+DATABASE_URL="mysql://19_kijowski:Mamut19@127.0.0.1:3306/db_name?serverVersion=5.7"
+
