--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -24,6 +24,8 @@ security:
                 # "login" is the name of the route created previously
                 login_path: app_login
                 check_path: app_login
+            logout:
+                path: app_logout
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#the-firewall
