--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,7 @@
         "twig/twig": "^2.12|^3.0"
     },
     "require-dev": {
+        "doctrine/doctrine-fixtures-bundle": "^3.4",
         "fakerphp/faker": "^1.19",
         "symfony/maker-bundle": "^1.38"
     },
