fixed base color form

--- a/composer.json
+++ b/composer.json
@@ -35,6 +35,7 @@
         "fakerphp/faker": "^1.19",
         "symfony/maker-bundle": "^1.38",
         "symfony/stopwatch": "5.4.*",
+        "symfony/var-dumper": "5.4.*",
         "symfony/web-profiler-bundle": "5.4.*"
     },
     "config": {
